# SEM4-SIK-LAB05

./: CMakeLists.txt  README.md  client.c  client.sh  common.h  err.h  file-client-tcp.c  file-server-tcp.c  preforked_server.c  proc_server.c  reuse_server.c  run_reuse_servers.sh  server.sh  shutdown_reuse_servers.sh  thread_server.c
libancillary/: Makefile  test.c
